# LP1-TrabalhoFinal

./: .gitignore  CMakeLists.txt  arquivo_io.c  arquivo_io.h  datadenascimento.h  endereco.h  exibicao.c  exibicao.h  lista_telefonica.txt  listatelefonica.c  listatelefonica.h  main.c  utils.c  utils.h  verificacao.c  verificacao.h
